--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,13 +1,11 @@
 @import "@/style/reset";
-// 导入基础样式
-@tailwind base;
-// 导入组件样式
-@tailwind components;
-// 导入实用工具样式
-@tailwind utilities;
-
 /* iconfont图标样式 */
 @import "@/assets/iconfont/iconfont.css";
-
 /* 进度条样式 */
 @import "./nprogress.scss";
+// 导入基础样式
+@import "tailwindcss/base";
+// 导入组件样式
+@import "tailwindcss/components";
+// 导入实用工具样式
+@import "tailwindcss/utilities";
