--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4559371 */
-  src: url('iconfont.woff2?t=1718275242933') format('woff2'),
-       url('iconfont.woff?t=1718275242933') format('woff'),
-       url('iconfont.ttf?t=1718275242933') format('truetype');
+  src: url('iconfont.woff2?t=1718851474701') format('woff2'),
+       url('iconfont.woff?t=1718851474701') format('woff'),
+       url('iconfont.ttf?t=1718851474701') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-huidaodingbu:before {
+  content: "\e600";
 }
 
 .icon-logo-qq:before {
