--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -82,7 +82,6 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
   vertical-align: baseline;
   box-sizing: border-box;
@@ -121,7 +120,6 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
   content: none;
 }
 
@@ -140,10 +138,10 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: "宋体", "微软雅黑", "PingFangSC-Light", "PingFang SC",
+  font-family: "微软雅黑", "宋体", "PingFangSC-Light", "PingFang SC",
     "STHeitiSC-Light", "Helvetica-Light", "Arial", "sans-serif";
   font-size: 16px;
-  font-weight: 600;
+  // font-weight: 600;
 }
 
 //清除浮动
