--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,6 @@
 @import "@/style/reset";
 /* iconfont图标样式 */
-@import "@/assets/iconfont/iconfont.css";
+@import "@/style/iconfont.css";
 /* 进度条样式 */
 @import "./nprogress.scss";
 // 导入基础样式
