--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -138,8 +138,8 @@ html,
 body {
   width: 100%;
   height: 100%;
-  font-family: "微软雅黑", "宋体", "PingFangSC-Light", "PingFang SC",
-    "STHeitiSC-Light", "Helvetica-Light", "Arial", "sans-serif";
+  font-family: "华文细黑","隶书",  "华文宋体", "微软雅黑", "PingFangSC-Light", "PingFang SC",
+  "STHeitiSC-Light", "Helvetica-Light", "Arial", "sans-serif";
   font-size: 16px;
   // font-weight: 600;
 }
