Refactoring login page components

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
-@import "@/style/reset";
+@import "./reset";
 /* iconfont图标样式 */
-@import "@/style/iconfont.css";
+@import "./iconfont.css";
+
+@import "./iconfontColor.css";
 /* 进度条样式 */
 @import "./nprogress.scss";
 // 导入基础样式
